fix: overflow of inputs on options page

--- a/addon/options.css
+++ b/addon/options.css
@@ -13,11 +13,12 @@
   min-width: 80px;
 }
 
-.options-tab-container {
+.sfir-options-tab-container {
   background-color: #f7f9fb;
   position: sticky;
   top: 0;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 1;
 }
 
 .main-container {
